--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Body
-$body-bg: #f8fafc;
+//$body-bg: #f8fafc;
 
 // Typography
 //$font-family-sans-serif: 'Nunito', sans-serif;
@@ -9,7 +9,7 @@ $body-bg: #f8fafc;
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
-$purple: #9561e2;
+$purple: #4648fb;
 $pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
@@ -18,6 +18,17 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $black: #000000;
+$white: #ffffff;
 
 // Bulma
-$primary: #ff5100;
+$primary: $purple;
+$info: $primary;
+$dark: rgb(32, 32, 32);
+/*$link: $cyan;
+$link: $cyan;
+$warning: $yellow;
+$danger: $red;
+$text: $white;
+
+$light: hsla(226%, 23%, 37%, 1);
+$background: hsla(229%, 34%, 13%, 1);*/
