--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,15 +4,12 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-//@import '~bootstrap/scss/bootstrap';
-
 // Font Awesome 5
 @import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '@fortawesome/fontawesome-free/scss/solid.scss';
 @import '@fortawesome/fontawesome-free/scss/brands.scss';
 
-//Bulma
+// Bulma + Theme
 @import 'bulma/bulma.sass';
 
 //Personal
