--- a/resources/sass/personal.scss
+++ b/resources/sass/personal.scss
@@ -22,18 +22,32 @@ svg {
     background-repeat: no-repeat;
 }
 
-.is-dark{
+.is-dark {
     background-color: $dark;
     color: $white;
 
     .title,
     .subtitle,
-    .strong, strong, b
-    {
+    .strong, strong,
+    b {
         color: $white;
     }
 
-    hr{
+    hr {
         background-color: rgba($white, .2);
     }
+}
+
+body::-webkit-scrollbar {
+    width: 1em;
+    background-color: $dark;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: linear-gradient(
+        lighten($primary, 10),
+        $primary
+    );
+
+    border-radius: 0.5em;
 }
